2006-11-06  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.17.2:
        * configure.ac: Update to new release version.
        * NEWS: Updated.
	* docs/C/gdm.xml: Update version number.
	* utils/Makefile.am: Add back X_EXTRA_LIBS and X_LIBS to
	  gdm-dmx-reconnect-proxy to fix bug #368808.

2006-11-04  Lukasz Zalewski  <lukas@dcs.qmul.ac.uk>
	
        Fixes bug #352924.
	* gui/gdmsetup.c: Added warnings when no themes are selected in
	  Random from sleceted mode. Random from selected option can only be 
	  enabled only and only if one or more themes are selected. Also 
	  disabled the delete button on the Random from selected view for 
	  the currently selected theme in the single theme view mode.

2006-11-02  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmlanguages.c, config/locale.alias:  Add several new
	  languages.  Patch provided by Peter Nugent <Peter.Nugent@sun.com>

2006-11-01  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml: Mention that altfile feature is supported
	  since 2.16.3.

2006-11-01  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_item_customlist.c: Fix casting.

2006-11-01  William Jon McCann  <mccann@jhu.edu>

	* Makefile.am:
	* daemon/Makefile.am:
	Fix make distcheck.

2006-10-31  William Jon McCann  <mccann@jhu.edu>

	* configure.ac:
	* daemon/Makefile.am:
	* daemon/gdm.c: (main):
	* daemon/gdmconsolekit.c: (add_param_int), (add_param_boolean),
	(add_param_string), (get_string), (unlock_ck_session),
	(open_ck_session), (close_ck_session):
	* daemon/gdmconsolekit.h:
	* daemon/slave.c: (gdm_slave_check_user_wants_to_log_in),
	(session_child_run), (gdm_slave_session_start):
	* docs/C/gdm.xml:
	Add ConsoleKit support.  Fixes #365375.

2006-10-31  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/greeter_item_customlist.c: Fix custom lists so
	  that focus does not leave the username/password entry field.
	* gui/greeter/greeter_item_pam.c: Minor cleanup.
